# data-centers-urban-effects

./: .gitignore  Branch Pull Request and Merge  RCode.r  README.md  cleaning_utilities.py  data_centers_over_time.html  datacenters_housing_merge.py  datacenters_housing_merged.csv  datacenters_info.txt  datacenters_per_zip.html  geocoding.py  main.py  pivoted_HHCScores.csv  pyproject.toml  sinan.md  top_10_us_cities_datacenters.csv  top_us_cities_datacenters.csv  webscrapping_data_centers.py  zillow_yearly_estimates_cook_county.csv
R Code/: GettingZIPcodeGeospatialData.r  JoinZillowEnergy.r  MergingZipCodeZillowEnergy.r
data/: ZillowEnergyFiltered.csv  chicago_data_centers.csv  chicago_data_centers_final.csv  chicago_data_centers_impact_scores.csv  chicago_data_centers_match (first_permit).csv  chicago_datacenters.csv  chicago_metro_zips.csv  datacenters_housing_merged.csv  housing_cost_data.csv  housing_cost_dumbbell.html  housing_price_dumbbell.html  il_in_wi_datacenters.csv  impact_score_bar_chart.html  top_us_cities_datacenters.csv  zillow_data_zip_code_cook_county.csv
data_analysis/: DataMethodology.md  chicag_data_centers_impact_scores.csv  chicago_data_centers_final.csv  index.py  test_index.py  tests_index.py  tests_index_dummy_data.csv  top_10_us_cities_datacenters_scores_mock.csv
milestones/: milestone1.md  milestone2.md
monthly_hhc/: nhgis0007_ds255_20215_zcta_codebook.txt
monthly_median_hhcosts/: nhgis0006_ds185_20115_zcta.csv  nhgis0006_ds185_20115_zcta_codebook.txt  nhgis0006_ds192_20125_zcta.csv  nhgis0006_ds192_20125_zcta_codebook.txt  (+20 more)
(+117 files in other folders)
